@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8" ?>
+ <!DOCTYPE HelpCollection>
+ <HelpCollection DTDVersion="1.0" FileVersion="1.0.0.0" LangId="1033" Title="TnFOXDocs">
+   <TOCDef File="TnFOXCollection.HxT" />
+   <KeywordIndexDef File="TnFOXCollection.HxK" />
+   <ItemMoniker Name="!DefaultToc" ProgId="HxDs.HxHierarchy" InitData="" />
+   <ItemMoniker Name="!DefaultFullTextSearch" ProgId="HxDs.HxFullTextSearch" InitData="" />
+   <ItemMoniker Name="!DefaultKeywordIndex" ProgId="HxDs.HxIndex" InitData="K" />
+   <ItemMoniker Name="!DefaultAssociativeIndex" ProgId="HxDs.HxIndex" InitData="A" />
+   <ItemMoniker Name="!DefaultContextWindowIndex" ProgId="HxDs.HxIndex" InitData="F" />
+ </HelpCollection>
+ 
