@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8" ?>
+ <!DOCTYPE HelpIndex>
+ <HelpIndex DTDVersion = "1.0"
+   Name = "K"
+   Title="K-Keyword Index"
+   Visible="Yes"
+   LangId="1033">
+ </HelpIndex>
+ 
