@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="utf-8" ?>
+ <!DOCTYPE HelpTOC>
+ <HelpTOC DTDVersion="1.0" PluginStyle="Hierarchical" PluginTitle="TnFOX">
+   <HelpTOCNode NodeType="TOC" Url="TnFOXHelpTitle"/>
+ </HelpTOC>
